[package]
name = "unix-no"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
description = "Output a string repeatedly until killed."
homepage = "https://github.com/metamethods/no"
documentation = "https://github.com/metamethods/no/blob/master/README.md"
repository = "https://github.com/metamethods/no"
readme = "README.md"
keywords = ["unix", "no"]
authors = ["metamethods <tabledmetamethods@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
